Fix for bug#16907 Partitions: crash, SELECT goes into last partition, UNIQUE INDEX   In presense of subpartitioning use get_part_partition_id() to calculate part_id